Fix layout issue with down chevron

--- a/less/kent.less
+++ b/less/kent.less
@@ -88,7 +88,6 @@ html body {
  */
 
 html body {
-
     /*
      * Overrides for live and such. 
      */
@@ -230,6 +229,7 @@ html body {
                         font-size: 18px;
                         display: inline-block;
                         vertical-align: middle;
+                        height: 32px;
                     }
                 }
             }
